Add jest-junit reporter and update Auto Grading  workflow

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -20,17 +20,16 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v4
       with:
-        node-version: '20'  # Use a stable version of Node.js
+        node-version: '20'
+        cache: 'npm'
 
     - name: Install dependencies
       run: npm install
 
-    # Example of running a Jest test suite
     - name: Run tests
-      run: |
-        npx jest script.test.js --ci --reporters=default --reporters=jest-junit
+      run: npx jest --ci
       id: jest-test
 
     - name: Autograding Reporter
